Add a troubleshooting page.

--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
 <li>Security
 </p>
 
+<h2>Useful Links:</h2>
+<li><a href="???">Java SE Documents</a></li>
+<li><a href="???">Java EE Documents</a></li>
+<li><a href='troubleshooting.html'>Troubleshooting</a></li>
+
 </body>
 </html>
