--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@
 		<b>Note: these will only work after the given exercise is deployed!
 		<ul>
 		<li><a href='http://localhost:8080/ticketmanor/'>Exercise 1.1: TicketManor</a></li>
-		<li><a href='http://localhost:8080/jenkins'>DoNow 21: Jenkins</a></li>
-		<li><a href='http://localhost:8080/ex51'>Exercise 51</a></li>
-		<li><a href='http://localhost:8080/ex51solution'>Exercise 51 Solution</a></li>
-		<li><a href='http://localhost:8080/ex61'>Exercise 61</a></li>
-		<li><a href='http://localhost:8080/ex61solution'>Exercise 61 Solution</a></li>
-		<li><a href='http://localhost:8080/ex71'>Exercise 71</a></li>
-		<li><a href='http://localhost:8080/ex71solution'>Exercise 71 Solution</a></li>
-		<li><a href='http://localhost:8080/ex81/admin'>Exercise 81</a></li>
-		<li><a href='http://localhost:8080/ex81solution'>Exercise 81 Solution</a></li>
+		<li><a href='http://localhost:8080/jenkins'>DoNow 2.1: Jenkins</a></li>
+		<li><a href='http://localhost:8080/ex51'>Exercise 5.1</a></li>
+		<li><a href='http://localhost:8080/ex51solution'>Exercise 5.1 Solution</a></li>
+		<li><a href='http://localhost:8080/ex61'>Exercise 6.1</a></li>
+		<li><a href='http://localhost:8080/ex61solution'>Exercise 6.1 Solution</a></li>
+		<li><a href='http://localhost:8080/ex71'>Exercise 7.1</a></li>
+		<li><a href='http://localhost:8080/ex71solution'>Exercise 7.1 Solution</a></li>
+		<li><a href='http://localhost:8080/ex81/TicketManor/admin'>Exercise 8.1</a></li>
 		</ul>
 	</div>
 </div>
