--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<b>Note: these will only work after the given exercise is deployed!
 		<ul>
 		<li><a href='http://localhost:8080/ticketmanor/'>Exercise 1.1: TicketManor</a></li>
-		<li><a href='http://localhost:8080/jenkins'>DoNow 2.1: Jenkins</a></li>
+		<li><a href='http://localhost:8080/jenkins/'>DoNow 2.1: Jenkins</a></li>
 		<li><a href='http://localhost:8080/ex51'>Exercise 5.1</a></li>
 		<li><a href='http://localhost:8080/ex51solution'>Exercise 5.1 Solution</a></li>
 		<li><a href='http://localhost:8080/ex61'>Exercise 6.1</a></li>
