--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -475,13 +475,70 @@ With practice, the errors will become easier to track down here.</p>
 internals isn&#8217;t that interesting.</p>
 </div>
 </div>
+<div class="sect3">
+<h4 id="_jms_issues_with_wildfly">JMS Issues With WildFly</h4>
+<div class="paragraph">
+<p>When you run ex42&#8217;s CommentSender, you should see something like this:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>1 20:38:57,478 INFO  [org.jboss.as.server] (management-handler-thread - 1) JBAS018559: Deployed "ex42solution-1.0.0-SNAPSHOT.war" (runtime-name : "ex42solution-1.0.0-SNAPSHOT.war")
+2 20:39:22,813 INFO  [stdout] (Thread-1 (HornetQ-client-global-threads-1648300319)) Got sender: Whiney Whitefoot--ww@gmail.moc
+ 20:39:22,813 INFO  [stdout] (Thread-1 (HornetQ-client-global-threads-1648300319)) Got comment: I actually love your site!!
+3 20:39:22,814 INFO  [stdout] (Thread-1 (HornetQ-client-global-threads-1648300319)) Hibernate: call next value for hibernate_sequence
+4 20:39:22,818 ERROR [stderr] (Thread-1 (HornetQ-client-global-threads-1648300319)) Feedback saved to database!
+5 20:39:22,825 INFO  [stdout] (Thread-1 (HornetQ-client-global-threads-1648300319)) Hibernate: insert into FeedbackForm (comment, custEmail, custName, date, id) values (?, ?, ?, ?, ?)
+6 20:39:22,808 ERROR [stderr] (Thread-2 (HornetQ-client-global-threads-1648300319)) Wanted ObjectMessage but got sent a org.hornetq.jms.client.HornetQTextMessage
+7 20:39:22,831 INFO  [org.jboss.as.naming] (default task-7) JBAS011806: Channel end notification received, closing channel Channel ID 52f7aa52 (inbound) of Remoting connection 573c6231 to /127.0.0.1:50304</pre>
+</div>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>1 is the normal deployment message</p>
+</li>
+<li>
+<p>2 Several debug printlns from CommentReceiver (format varies as you wrote this) dumping the form</p>
+</li>
+<li>
+<p>3 JPA Provider (Hibernate) getting ready to insert</p>
+</li>
+<li>
+<p>4 Output from CommentReceiver after giving data to JPA</p>
+</li>
+<li>
+<p>5 JPA Provider trace of the insert</p>
+</li>
+<li>
+<p>6 This is from the second "send" that you are asked to do in CommentSender</p>
+</li>
+<li>
+<p>7 We closed the Session, so the other end gets notified and cleans up.</p>
+</li>
+</ol>
+</div>
+<div class="paragraph">
+<p>Note that becuase of threading, the lines can appear in almost any order.
+In fact, line 6 often appears before line 2, because its thread has much less to do
+and finishes more quickly!</p>
+</div>
+<div class="paragraph">
+<p>If you get anything terribly different, please ask your instructor. Notice
+also the JBoss will sometimes tell you it&#8217;s re-deployed your JMS but
+apparently not actually do so; add a debug statement and see if the line
+numbers in the stack trace are affected. If not, we have to stop the server,
+find and remove the deployment element near the end of
+WILDFLY_HOME/standalone/configuration/standalone-full.xml, re-start the server,
+and re-deploy the application.</p>
+</div>
+</div>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-02-13 10:48:53 EST
+Last updated 2015-02-20 21:09:53 EST
 </div>
 </div>
 </body>
