Un-double-number list

--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -495,25 +495,25 @@ internals isn&#8217;t that interesting.</p>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>1 is the normal deployment message</p>
+<p>Is the normal deployment message</p>
 </li>
 <li>
-<p>2 Several debug printlns from CommentReceiver (format varies as you wrote this) dumping the form</p>
+<p>Several debug printlns from CommentReceiver (format varies as you wrote this) dumping the form</p>
 </li>
 <li>
-<p>3 JPA Provider (Hibernate) getting ready to insert</p>
+<p>JPA Provider (Hibernate) getting ready to insert</p>
 </li>
 <li>
-<p>4 Output from CommentReceiver after giving data to JPA</p>
+<p>Output from CommentReceiver after giving data to JPA</p>
 </li>
 <li>
-<p>5 JPA Provider trace of the insert</p>
+<p>JPA Provider trace of the insert</p>
 </li>
 <li>
-<p>6 This is from the second "send" that you are asked to do in CommentSender</p>
+<p>This is from the second "send" that you are asked to do in CommentSender</p>
 </li>
 <li>
-<p>7 We closed the Session, so the other end gets notified and cleans up.</p>
+<p>We closed the Session, so the other end gets notified and cleans up.</p>
 </li>
 </ol>
 </div>
@@ -538,7 +538,7 @@ and re-deploy the application.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-02-20 21:09:53 EST
+Last updated 2015-02-20 22:14:52 EST
 </div>
 </div>
 </body>
