--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		<li><a href='apidocs/datamodel/index.html'>TicketManor datamodel docs</a></li>
 		<li><a href='apidocs/javaee/index.html'>TicketManor EE server docs</a></li>
 		<li><a href='troubleshooting.html'>Troubleshooting</a></li>
+		<li><a href='http://www.primefaces.org/showcase/'>PrimeFaces Showcase</a></li>
 	</div>
 
 	<div class="feature">
