Downplay REST, no longer its own chapter

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
 		<ul>
 		<li>Java Persistence
 		<li>Enterprise JavaBeans
-		<li>RESTful Web Services
 		<li>JavaServer Faces
-		<li>Ember.JS
+		<li>Ember.JS, using REST services with JSON
 		<li>Security
 		</p>
 	</div>
