Add DoNow's for jsfdemo

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		<ul>
 		<li><a href='http://localhost:8080/ticketmanor/'>Exercise 1.1: TicketManor</a></li>
 		<li><a href='http://localhost:8080/jenkins/'>DoNow 2.1: Jenkins</a></li>
+		<li><a href='http://localhost:8080/jsfdemo/'>DoNow 5.x (jsfdemo)</a></li>
 		<li><a href='http://localhost:8080/ex51'>Exercise 5.1</a></li>
 		<li><a href='http://localhost:8080/ex51solution'>Exercise 5.1 Solution</a></li>
 		<li><a href='http://localhost:8080/ex61'>Exercise 6.1</a></li>
