Consolidate wording on webservice-only deployments.

--- a/sourcecode/ex51solution/src/main/webapp/index.html
+++ b/sourcecode/ex51solution/src/main/webapp/index.html
@@ -1,3 +1,5 @@
 <h1>ex51solution is deployed</h1>
+There is no web-facing activity in this
+deployed application.
 There is a web service here. 
 If you know its name you can access it.
