--- a/sourcecode/ex42solution/src/main/webapp/index.html
+++ b/sourcecode/ex42solution/src/main/webapp/index.html
@@ -1,9 +1,8 @@
 <html>
 <body>
 <p>
-Welcome to Exercise 4.2. 
+<h1>ex42solution is deployed</h1>
 There is no web-facing activity in this
 deployed application.
-</p>
-</body>
-</html>
+There is a web service here. 
+If you know its name you can access it.
