Sync for H.1 revision, in which chapters moved around

--- a/index.html
+++ b/index.html
@@ -51,14 +51,12 @@
 		<ul>
 		<li><a href='http://localhost:8080/ticketmanor/'>Exercise 1.1: TicketManor</a></li>
 		<li><a href='http://localhost:8080/jenkins/'>DoNow 2.1: Jenkins</a></li>
-		<li><a href='http://localhost:8080/jsfdemo/'>DoNow 5.x (jsfdemo)</a></li>
+		<li><a href='http://localhost:8080/jsfdemo/'>DoNow 5.1 and 5.2 (jsfdemo)</a></li>
 		<li><a href='http://localhost:8080/ex51'>Exercise 5.1</a></li>
 		<li><a href='http://localhost:8080/ex51solution'>Exercise 5.1 Solution</a></li>
-		<li><a href='http://localhost:8080/ex61'>Exercise 6.1</a></li>
-		<li><a href='http://localhost:8080/ex61solution'>Exercise 6.1 Solution</a></li>
-		<li><a href='http://localhost:8080/ex71'>Exercise 7.1</a></li>
-		<li><a href='http://localhost:8080/ex71solution'>Exercise 7.1 Solution</a></li>
-		<li><a href='http://localhost:8080/ex81/TicketManor/admin'>Exercise 8.1</a></li>
+		<li><a href='http://localhost:8080/ticketmanor/sportsList.html'>Exercise 6.1</a> (TicketManor - Ember - Sports List)</li>
+		<li><a href='http://localhost:8080/ex71/TicketManor/admin'>Exercise 7.1</a> (TicketManor /admin)</li>
+		<li><a href='http://localhost:8080/clublist'>Exercise 8.1</a> (Assuming default naming)</li>
 		</ul>
 	</div>
 </div>
