--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		<li><a href='http://localhost:8080/jsfdemo/'>DoNow 5.1 and 5.2 (jsfdemo)</a></li>
 		<li><a href='http://localhost:8080/ex51'>Exercise 5.1</a></li>
 		<li><a href='http://localhost:8080/ex51solution'>Exercise 5.1 Solution</a></li>
+		<li><a href='file:///C:/CourseFiles/samples/cssdemo/index.html'>DoNow 6.1 (CSS)</a></li>
 		<li><a href='http://localhost:8080/ticketmanor/sportsList.html'>Exercise 6.1</a> (TicketManor - Ember - Sports List)</li>
 		<li><a href='http://localhost:8080/ex71/TicketManor/admin'>Exercise 7.1</a> (TicketManor /admin)</li>
 		<li><a href='http://localhost:8080/clublist'>Exercise 8.1</a> (Assuming default naming)</li>
