Revise wording of selling features bullet points

--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 <div class="features section">
 	<div class="feature">
 		<h2>Welcome to Course 936... </h2>
-		<p>This course will get you off to a great start in Java Enterprise Software Development, featuring:
+		<p>This course helps to get you off to a great start 
+		in Java Enterprise Software Development, featuring:
 		<ul>
-		<li>Java Persistence
-		<li>Enterprise JavaBeans
-		<li>JavaServer Faces
-		<li>Ember.JS, using REST services with JSON
+		<li>Java Persistence (JPA)
+		<li>Enterprise JavaBeans (EJB3)
+		<li>JavaServer Faces UI
+		<li>Ember.JS - JavaScript UI
 		<li>Security
 		</p>
 	</div>
