--- a/sourcecode/ex51solution/src/main/webapp/eventsSearch.xhtml
+++ b/sourcecode/ex51solution/src/main/webapp/eventsSearch.xhtml
@@ -18,7 +18,7 @@
 				<h:form id="eventsForm">
 
 					<h:outputText value="Search for events for next how many days?"/>
-					<!-- //T Connect the number of days textfield to the bean property -->
+					<!-- //T Create the number of days textfield, connect it to bean property # of days -->
 					<!-- //- -->
 					<h:inputText required="true" id="nDaysTextField" value="#{eventsBean.numDays}" />
 					<!-- //+ -->
