--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -518,7 +518,7 @@ internals isn&#8217;t that interesting.</p>
 </ol>
 </div>
 <div class="paragraph">
-<p>Note that becuase of threading, the lines can appear in almost any order.
+<p>Note that because of threading, the lines can appear in almost any order.
 In fact, line 6 often appears before line 2, because its thread has much less to do
 and finishes more quickly!</p>
 </div>
@@ -538,7 +538,7 @@ and re-deploy the application.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-04-17 11:49:20 EDT
+Last updated 2015-09-04 14:53:07 EDT
 </div>
 </div>
 </body>
