Can't link to RestClient?

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<li><a href='http://localhost:8080/jenkins/'>DoNow 2.1: Jenkins</a></li>
 		<li><a href='http://localhost:8080/jsfdemo/'>DoNow 5.1 and 5.2 (jsfdemo)</a></li>
 		<li><a href='http://localhost:8080/ex51'>Exercise 5.1</a></li>
-		<li><a href='chrome://restclient/content/restclient.html'>Exercise 6.1 - FireFox RESTClient</a></li>
+		<li>Exercise 6.1 - Use FireFox RESTClient (Red Icon)</li>
 		<li><a href='file:///C:/CourseFiles/samples/cssdemo/index.html'>DoNow 7.1 (CSS)</a></li>
 		<li><a href='http://localhost:8080/ticketmanor/sportsList.html'>Exercise 7.1</a> (TicketManor - Ember - Sports List)</li>
 		<li><a href='http://localhost:8080/ex81/TicketManor/admin'>Exercise 7.1</a> (TicketManor /admin)</li>
