--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 		<li>Exercise 6.1 - Use FireFox RESTClient (Red Icon)</li>
 		<li><a href='file:///C:/CourseFiles/samples/cssdemo/index.html'>DoNow 7.1 (CSS)</a></li>
 		<li><a href='http://localhost:8080/ticketmanor/sportsList.html'>Exercise 7.1</a> (TicketManor - Ember - Sports List)</li>
-		<li><a href='http://localhost:8080/ex81/TicketManor/admin'>Exercise 7.1</a> (TicketManor /admin)</li>
-		<li><a href='http://localhost:8080/clublist'>Exercise 9.1</a> (Assuming default naming)</li>
+		<li><a href='http://localhost:8080/ex81/TicketManor/admin'>Exercise 8.1</a> (TicketManor /admin Security)</li>
+		<li><a href='http://localhost:8080/clublist'>Exercise 9.1</a> (ClubList - assuming default naming)</li>
 		</ul>
 	</div>
 </div>
