--- a/sourcecode/ex51solution/src/main/webapp/admin/login.xhtml
+++ b/sourcecode/ex51solution/src/main/webapp/admin/login.xhtml
@@ -8,7 +8,7 @@
     <div class="text">Login required to access Administration</div>
 
     <form method="GET" action="j_security_check">
-        <table cellpadding="0" cellspacing="0" border="0">
+        <table cellpadding="0" cellspacing="0">
             <tr>
                 <td align="right">Username: </td>
                 <td><input type="text" name="j_username"/></td>
@@ -18,7 +18,7 @@
                 <td><input type="password" name="j_password"/></td>
             </tr>
             <tr>
-                <td align='centre' colspan='2'>
+                <td align='center' colspan='2'>
                     <input type="submit" value="Admin Login"/>
                  </td>
              </tr>
