--- a/sourcecode/ex51solution/src/main/webapp/csrchatwindow.html
+++ b/sourcecode/ex51solution/src/main/webapp/csrchatwindow.html
@@ -38,7 +38,7 @@ window.addEventListener("load", connect, false);
 
 <fieldset>
     <legend>Chat Window:</legend>
-	<textarea id="log" rows='10' cols='80' placeholder="Chat log here" width="100%"></textarea>
+	<textarea id="log" rows='10' cols='80' placeholder="Chat log here"></textarea>
 	<fieldset>
     <legend>Your message:</legend>
 	<input id="input" size="80" placeholder="How can we help you today?"></input>
