Moving towards a working ex43, with client in its own package.

--- a/sourcecode/ex43solution/src/main/webapp/index.html
+++ b/sourcecode/ex43solution/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <p>
-<h1>ex42solution is deployed</h1>
+<h1>The MDB for ex43solution is deployed</h1>
 There is no web-facing activity in this
 deployed application.
 There is a web service here. 
