h:commandButton inside h:form, plez

--- a/sourcecode/ex81solution/src/main/webapp/admin/index.xhtml
+++ b/sourcecode/ex81solution/src/main/webapp/admin/index.xhtml
@@ -14,11 +14,13 @@
 
 		<div class="text">Welcome Administrator</div>
 
-		<h:outputText value="If you can see this page, you now have unlimited power over this data! Mwahahah!!"/>
-		<p>
-		Actions:
-		</p>
-		<h:commandButton value="Create new coupon code" action="#{adminBean.getNextCouponCode()}"/>
+		<h:form>
+			<h:outputText value="If you can see this page, you now have unlimited power over this data! Mwahahah!!"/>
+			<p>
+			Actions:
+			</p>
+			<h:commandButton value="Create new coupon code" action="#{adminBean.getNextCouponCode}"/>
+		</h:form>
 
 	</ui:define>
 
