--- a/sourcecode/ex81solution/src/main/webapp/loginfailure.xhtml
+++ b/sourcecode/ex81solution/src/main/webapp/loginfailure.xhtml
@@ -11,7 +11,8 @@
 
 	<ui:define name="body">
 	<p>We're so sorry, but your login has failed.
-	You can <a href="/">try again</a>, or give up, or contact tech support.
+	<!-- Solutions in likelihood of success :-) -->
+	You can <a href=".">try again</a>, go <a href="#{request.contextPath}">back to the top</a>, give up, or contact tech support.
 	</p>
 
 	</ui:define>
