Put welcome into h1

--- a/sourcecode/ex81solution/src/main/webapp/admin/index.xhtml
+++ b/sourcecode/ex81solution/src/main/webapp/admin/index.xhtml
@@ -12,7 +12,7 @@
 
 	<ui:define name="body">
 
-		<div class="text">Welcome Administrator</div>
+		<h1>Welcome Administrator</h1>
 
 		<h:form>
 			<h:outputText value="If you can see this page, you now have unlimited power over this data! Mwahahah!!"/>
