--- a/sourcecode/ex81solution/src/main/webapp/index.xhtml
+++ b/sourcecode/ex81solution/src/main/webapp/index.xhtml
@@ -12,9 +12,7 @@
 
 	<ui:define name="body">
 
-		<p>
-		Welcome to our new site!
-		</p>
+		<h1>Welcome to our new site!</h1>
 
 		<div class="text">Psst! Wanna Be An Administrator?</div>
 		Try our cool new <h:outputLink value="admin/index.web">Admin Page</h:outputLink>
