--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<div class="feature">
 		<h2>Exercise Links</h2>
 		<p>Not all exercises have a web component; those that do are listed here.
-		<b>Note: these will only work after the given exercise is deployed!
+		<b>Note: these will only work after the given exercise is deployed!</b>
 		<ul>
 		<li><a href='http://localhost:8080/ticketmanor/'>Exercise 1.1: TicketManor</a></li>
 		<li><a href='http://localhost:8080/jenkins/'>DoNow 2.1: Jenkins</a></li>
