index.html gets some love: emphasis where needed, close tags, better opening line, etc.

--- a/index.html
+++ b/index.html
@@ -14,21 +14,22 @@
 <!-- Common header elements for TicketManor -->
 <div id="header">
   <div id="wrapper">
-	<p>Welcome to Course 936... </p>
+	<p style="color:white; font-size: 2em;">Welcome to Course 936... </p>
   </div>
 </div>
 
 <div class="features section">
 	<div class="feature">
-		<h2>Welcome to Course 936... </h2>
+		<h2>About This Course</h2>
 		<p>This course helps to get you off to a great start 
 		in Java Enterprise Software Development, featuring:
 		<ul>
-		<li>Java Persistence (JPA)
-		<li>Enterprise JavaBeans (EJB3)
-		<li>JavaServer Faces UI
-		<li>Ember.JS - JavaScript UI
-		<li>Security
+		<li>Java EE Big Picture</li>
+		<li>Java Persistence (JPA)</li>
+		<li>Enterprise JavaBeans (EJB3)</li>
+		<li>JavaServer Faces UI</li>
+		<li>Ember.JS - JavaScript UI</li>
+		<li>Security</li>
 		</p>
 	</div>
 
@@ -48,7 +49,7 @@
 	<div class="feature">
 		<h2>Exercise Links</h2>
 		<p>Not all exercises have a web component; those that do are listed here.
-		<b>Note: these will only work after the given exercise is deployed!</b>
+		<span style="font-weight: bold; font-style: italic;">Note: these will only work after the given exercise is deployed!</span>
 		<ul>
 		<li><a href='http://localhost:8080/ticketmanor/'>Exercise 1.1: TicketManor</a></li>
 		<li><a href='http://localhost:8080/jenkins/'>DoNow 2.1: Jenkins</a></li>
