Implement a trivial date-based versioning for the course load.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<span style="font-weight: bold; font-style: italic;">Note: these will only work after the given exercise is deployed!</span>
 		<ul>
 		<li><a href='http://localhost:8080/ticketmanor/'>Exercise 1.1: TicketManor</a></li>
-		<li><a href='http://localhost:8080/jenkins/'>DoNow 2.1: Jenkins</a></li>
+		<li><a href='http://localhost:8080/jenkins/'>DoNow 2.2: Jenkins</a></li>
 		<li><a href='http://localhost:8080/jsfdemo/'>DoNow 5.1 and 5.2 (jsfdemo)</a></li>
 		<li><a href='http://localhost:8080/ex51'>Exercise 5.1</a></li>
 		<li>Exercise 6.1 - Use FireFox RESTClient (Red Icon)</li>
@@ -62,6 +62,15 @@
 		<li><a href='http://localhost:8080/clublist'>Exercise 9.1</a> (ClubList - assuming default naming)</li>
 		</ul>
 	</div>
+</div>
+<div align="right">
+<p style="size:0.6m"><a href="version.html">Version Info</a></p>
+<!-- If html5 rel='import' ever becomes usable on file:// urls (it's not as of 2016!!), replace with an import -->
+<link rel="import" href="file:///Users/ian/CourseFiles936/version.html">
+<script>
+var doc = document.querySelector('link[rel="import"]').import;
+document.body.appendChild(doc.cloneNode(true));
+</script>
 </div>
 </body>
 </html>
