Remove ember link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 		<li>Java Persistence (JPA)</li>
 		<li>Enterprise JavaBeans (EJB3)</li>
 		<li>JavaServer Faces UI</li>
-		<li>Ember.JS - JavaScript UI</li>
 		<li>Security</li>
 		</p>
 	</div>
@@ -55,9 +54,7 @@
 		<li><a href='http://localhost:8080/jenkins/'>DoNow 2.2: Jenkins</a></li>
 		<li><a href='http://localhost:8080/jsfdemo/'>DoNow 5.1 and 5.2 (jsfdemo)</a></li>
 		<li><a href='http://localhost:8080/ex51'>Exercise 5.1</a></li>
-		<li>Exercise 6.1 - Use FireFox RESTClient (Red Icon)</li>
-		<li><a href='file:///C:/CourseFiles/samples/cssdemo/index.html'>DoNow 7.1 (CSS)</a></li>
-		<li><a href='http://localhost:8080/ticketmanor/sportsList.html'>Exercise 7.1</a> (TicketManor - Ember - Sports List)</li>
+		<li>Exercise 7.1 - Use PostMan or RESTClient</li>
 		<li><a href='http://localhost:8080/ex81/admin'>Exercise 8.1</a> (ex81 /admin Security)</li>
 		<li><a href='http://localhost:8080/clublist'>Exercise 9.1</a> (ClubList - assuming default naming)</li>
 		</ul>
