--- a/sourcecode/ex61solution/src/main/webapp/eventsSearch.xhtml
+++ b/sourcecode/ex61solution/src/main/webapp/eventsSearch.xhtml
@@ -24,12 +24,11 @@
 					<!-- //+ -->
 					<h:message for="nDaysTextField" errorStyle="color:red"/>
 
-					<!-- //T Add ONE attribute to connect this Search button to the getEventsNextNDays method -->
-					<h:commandButton value="Search"
+					<!-- //T Connect the Search button to the getEventsNextNDays method -->
+					<h:commandButton value="Search"/>
 					<!-- //- -->
-						action="#{eventsBean.getEventsNextNDays}"
+					<h:commandButton value="Search" action="#{eventsBean.getEventsNextNDays}"/>
 					<!-- //+ -->
-					/>
 					
 				</h:form>
 				<!-- The results will show up on eventsList.web -->
