Change incomplete Button to TF, change TODO, avoids 2nd button in Solution

--- a/sourcecode/ex61solution/src/main/webapp/eventsSearch.xhtml
+++ b/sourcecode/ex61solution/src/main/webapp/eventsSearch.xhtml
@@ -24,8 +24,8 @@
 					<!-- //+ -->
 					<h:message for="nDaysTextField" errorStyle="color:red"/>
 
-					<!-- //T Connect the Search button to the getEventsNextNDays method -->
-					<h:commandButton value="Search"/>
+					<!-- //T Replace the outputText with a commandButton to the getEventsNextNDays method -->
+					<h:outputText value="Search"/>
 					<!-- //- -->
 					<h:commandButton value="Search" action="#{eventsBean.getEventsNextNDays}"/>
 					<!-- //+ -->
