--- a/README.html
+++ b/README.html
@@ -463,7 +463,7 @@ These projects are all hosted on the course author&#8217;s github, at
 </div>
 </div>
 <div class="sect1">
-<h2 id="_setup">Setup</h2>
+<h2 id="_set_up_the_environment_at_home_or_work">Set Up the environment at home or work</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>To set up the environment at home or work, you should try the following
@@ -473,7 +473,7 @@ and might work on MS-Windows with CygWin or equivalent):</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Make sure you have Java 8, Maven 3, and git installed and on your PATH.</p>
+<p>Make sure you have Java 8, Maven 3, and <em>git</em> installed and on your PATH.</p>
 </li>
 <li>
 <p>Make sure you have Wildfly 8 installed but not running;
@@ -489,7 +489,8 @@ AND the DataSource configurations (alas, the EE spec doesn&#8217;t nail down how
 <div class="listingblock">
 <div class="content">
 <pre>cd WHERE_YOU_WANT_IT
-for repo in LearningTree/TicketManorJava IanDarwin/{CourseFiles936,jsfdemo,jpademo,makehandsons,clublist,javasrc,darwinsys-api}
+for repo in LearningTree/TicketManorJava \
+	IanDarwin/{CourseFiles936,jsfdemo,jpademo,makehandsons,clublist,javasrc,darwinsys-api}
 do
     git clone https://github.com/$repo
 done</pre>
@@ -591,7 +592,7 @@ interfere with it working with Eclipse and Maven, please feel free to send a Git
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-09 13:21:51 EST
+Last updated 2018-01-09 13:32:42 EST
 </div>
 </div>
 </body>
