--- a/README.html
+++ b/README.html
@@ -473,10 +473,10 @@ and might work on MS-Windows with CygWin or equivalent):</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Make sure you have Java 8, Maven 3, and <em>git</em> installed and on your PATH.</p>
+<p>Make sure you have Java (10 or 11), Maven 3, and <em>git</em> installed and on your PATH.</p>
 </li>
 <li>
-<p>Make sure you have Wildfly 8 installed but not running;
+<p>Make sure you have Wildfly installed but not running;
 you could use a different App Server but you&#8217;d have to change
 all the Maven deployment configurations (they have GlassFish and Tomcat in place but unmaintained!!)
 AND the DataSource configurations (alas, the EE spec doesn&#8217;t nail down how to do this).</p>
@@ -592,7 +592,7 @@ interfere with it working with Eclipse and Maven, please feel free to send a Git
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-09 13:32:42 EST
+Last updated 2018-01-09 13:34:46 EST
 </div>
 </div>
 </body>
