--- a/sourcecode/samples/src/main/webapp/bootstrap/index.html
+++ b/sourcecode/samples/src/main/webapp/bootstrap/index.html
@@ -25,6 +25,7 @@
 	<div class="page-header">
         <h1>Bootstrap Example</h1>
 	</div>
+	
 	<div class='row'>
 		<div class="col-md-4">.col-md-4</div>
 		<div class="col-md-4">.col-md-4</div>
@@ -35,8 +36,8 @@
 		<div class="col-md-2">.col-md-2</div>
 		<div class="col-md-4">.col-md-4</div>
 		<div class="col-md-6">.col-md-6</div>
-	</<div>
-</<div>
+	</div>
 </div>
+
 </body>
 </html>
