--- a/sourcecode/samples/src/main/webapp/html5/bootstrapdemo.html
+++ b/sourcecode/samples/src/main/webapp/html5/bootstrapdemo.html
@@ -39,4 +39,5 @@
 			ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
 		</p>
 		</div>
-
+		</div>
+	</div>
