--- a/README.html
+++ b/README.html
@@ -441,7 +441,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>The <em>sourcecode</em> subdirectory of the current folder is intended to be the root of an Eclipse Workspace</p>
 </div>
 <div class="paragraph">
-<p>This is for the J.1 Revision; do not try to use this earlier versions as the directory structure has changed.</p>
+<p>This is for the J.1 Revision (Jan 2018); <strong>do not</strong> try to use this earlier versions as the directory structure has changed.</p>
 </div>
 <div class="paragraph">
 <p>All code is copyright &#169; by Learning Tree International.</p>
@@ -454,11 +454,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 LearningTree&#8217;s GitHub account, <a href="https://github.com/LearningTree/TicketmanorJava/" class="bare">https://github.com/LearningTree/TicketmanorJava/</a>.</p>
 </div>
 <div class="paragraph">
-<p>There are several adjacent folders: jsfdemo jpademo clublist javasrc.
-There is also the makehandsons project; this makes the exercises from
-the solutions so they are always in synch.
-These projects are all hosted on the course author&#8217;s github, at
-<a href="https://github.com/IanDarwin/" class="bare">https://github.com/IanDarwin/</a>.</p>
+<p>There are several adjacent folders hosted on the author&#8217;s github,
+<a href="https://github.com/IanDarwin/" class="bare">https://github.com/IanDarwin/</a>, including jsfdemo jpademo clublist javasrc.
+There is also the <em>makehandsons</em> project which makes the hands-on exercises from
+the solutions, so they are always in synch.</p>
 </div>
 </div>
 </div>
@@ -585,7 +584,7 @@ interfere with it working with Eclipse and Maven, please feel free to send a Git
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-12 14:27:56 EST
+Last updated 2018-01-12 14:33:03 EST
 </div>
 </div>
 </body>
