--- a/README.html
+++ b/README.html
@@ -486,6 +486,9 @@ all the Maven deployment configurations (they have GlassFish and Tomcat in place
 AND the DataSource configurations (alas, the EE spec doesn&#8217;t nail down how to do this).</p>
 </li>
 <li>
+<p>Poor MS-Windows users must also install cygwin, including git and diff.</p>
+</li>
+<li>
 <p>Git clone all the projects listed above into a single parent directory (in the course we use C:\ but anyplace <strong>should</strong> work).</p>
 </li>
 </ul>
@@ -494,7 +497,7 @@ AND the DataSource configurations (alas, the EE spec doesn&#8217;t nail down how
 <div class="content">
 <pre>cd WHERE_YOU_WANT_IT
 for repo in LearningTree/TicketManorJava \
-	IanDarwin/{CourseFiles936,clublist,javasrc,darwinsys-api,jsfdemo,jpademo,makehandsons}
+	IanDarwin/{CourseFiles936,clublist,javasrc,darwinsys-api,jsfdemo,jpademo,cdi-ee-samples,makehandsons,createprojects}
 do
     git clone https://github.com/$repo
 done</pre>
@@ -584,7 +587,7 @@ interfere with it working with Eclipse and Maven, please feel free to send a Git
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-12 14:33:03 EST
+Last updated 2018-01-14 14:57:22 EST
 </div>
 </div>
 </body>
