--- a/databases.html
+++ b/databases.html
@@ -460,8 +460,11 @@ It&#8217;s called H2 because it is an outgrowth of the earlier Hypersonic.</p>
 <div class="paragraph">
 <p>Postgresql is an open source SQL database that is closer in spirit and syntax
 to Oracle and, IMHO, both closer to the SQL standard, more sensible, and
-more robust, compared to other open-source databases. There are two interfaces
-to it, the command-line psql and the gui.</p>
+more robust, compared to other open-source databases.
+The server runs as a daemon on Unix/Linux/Mac and as a Service on MS-Windows.</p>
+</div>
+<div class="paragraph">
+<p>There are two interfaces to PostgreSQL, the command-line psql and the gui.</p>
 </div>
 <div class="paragraph">
 <p>PSQL is a command-line command that is on your path.
@@ -492,7 +495,7 @@ select * from person;
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-14 16:31:25 EST
+Last updated 2018-01-14 16:46:24 EST
 </div>
 </div>
 </body>
