--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
 	</div>
 </div>
 <div align="right">
-<p style="size:0.6m"><a href="version.html">Version Info</a></p>
+<p style="size:0.6m">
+	<a href="about.html">About</a>
+	&nbsp;
+	<a href="version.html">Version Info</a>
+	&nbsp;
+</p>
 <!-- If html5 rel='import' ever becomes usable on file:// urls (it's not as of 2016!!), replace with an import -->
 <link rel="import" href="file:///Users/ian/CourseFiles936/version.html">
 <script>
