--- a/README.html
+++ b/README.html
@@ -487,7 +487,7 @@ GlassFish and Tomcat in <em>pom.xml</em>, but this is unmaintained!!)
 AND the DataSource configurations (alas, the EE spec doesn&#8217;t nail down how to do this).</p>
 </li>
 <li>
-<p>Poor MS-Windows users must also install cygwin, including:</p>
+<p>MS-Windows users must also install cygwin, including:</p>
 <div class="ulist">
 <ul>
 <li>
@@ -510,7 +510,7 @@ AND the DataSource configurations (alas, the EE spec doesn&#8217;t nail down how
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>cd WHERE_YOU_INATALLED
+<pre>cd WHERE_YOU_INSTALLED
 for repo in LearningTree/TicketManorJava \
 	IanDarwin/{CourseFiles936,clublist,javasrc,darwinsys-api,jsfdemo,jpademo,cdi-ee-exaamples,makehandsons,createprojects}
 do
@@ -520,6 +520,17 @@ done</pre>
 </div>
 <div class="ulist">
 <ul>
+<li>
+<p>Create databases:
+psql &lt;&lt;!
+create user student password 'student' login nosuperuser;
+create database ticketmanor owner student;
+create database jpademo owner student;
+create database jpa_basic owner student;
+create database jpa_inheritance owner student;
+create database jpa_aggregation owner student;
+!</p>
+</li>
 <li>
 <p>Copy or merge Coursefiles936/configs/standalone-full.xml into wildfly</p>
 </li>
@@ -622,7 +633,7 @@ interfere with it working with Eclipse and Maven, please feel free to send a Git
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-14 16:03:48 EST
+Last updated 2018-01-14 20:51:50 EST
 </div>
 </div>
 </body>
