--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<li><a href='apidocs/datamodel/index.html'>TicketManor datamodel docs</a></li>
 		<li><a href='databases.html'>Databases/Datasources</a></li>
 		<li><a href='apidocs/javaee/index.html'>TicketManor EE server docs</a></li>
-		<li><a href='README.html'>Setting up the environment at home/office</a></li>
+		<li><a href='README.html'>Setting up at home/office</a></li>
 		<li><a href='troubleshooting.html'>Troubleshooting</a></li>
 		<li><a href='http://www.primefaces.org/showcase/'>PrimeFaces Showcase</a> (offsite)</li>
 	</div>
@@ -55,7 +55,7 @@
 		<li><a href='http://localhost:8080/jenkins/'>DoNow 2.2: Jenkins</a></li>
 		<li><a href='http://localhost:8080/jsfdemo/'>DoNow 6.1 and 6.2 (jsfdemo)</a></li>
 		<li><a href='http://localhost:8080/ex61'>Exercise 6.1</a></li>
-		<li>Exercise 7.1 - Use PostMan or RESTClient</li>
+		<li>Exercise 7.1 - Use PostMan application</li>
 		<li><a href='http://localhost:8080/ex81/admin'>Exercise 8.1</a> (ex81 /admin Security)</li>
 		<li><a href='http://localhost:8080/clublist'>Exercise 9.1</a> (ClubList - assuming default naming)</li>
 		</ul>
