--- a/databases.html
+++ b/databases.html
@@ -488,6 +488,10 @@ select * from person;
 </div>
 </div>
 <div class="paragraph">
+<p>The GUI interface is started from the Start Menu, under PostgreSQL 10,
+choose the pgAdmin application. Expand the Servers list at the left.</p>
+</div>
+<div class="paragraph">
 <p>We used psql to set up the persistent databases, as follows:</p>
 </div>
 <div class="literalblock">
@@ -553,15 +557,12 @@ create database jpa_aggregation owner student;
 </tr>
 </tbody>
 </table>
-<div class="paragraph">
-<p>The GUI interface is started from the Start Menu or the Desktop icon.</p>
-</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-14 20:59:57 EST
+Last updated 2018-01-15 10:37:01 EST
 </div>
 </div>
 </body>
