--- a/README.html
+++ b/README.html
@@ -601,7 +601,8 @@ otherwise error messages would be missed.</p>
 </li>
 <li>
 <p>If it opens an existing workspace, do File&#8594;Switch Workspace. If not it will ask you for the workspace.
-Browse to where you downloaded CourseFiles936, and select (but don&#8217;t double click on) CourseFiles936/sourcecode. Click OK.</p>
+Browse to where you downloaded CourseFiles936, and select (but don&#8217;t double click
+on) <strong>CourseFiles936/sourcecode</strong>. Click OK.</p>
 </li>
 <li>
 <p>Then do File&#8594;New Project&#8594;new Java Project, browse to the TicketManorJava folder, select but don&#8217;t double-click
@@ -650,7 +651,7 @@ interfere with it working with Eclipse and Maven, please feel free to send a Git
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-15 10:31:30 EST
+Last updated 2018-01-15 11:53:10 EST
 </div>
 </div>
 </body>
