--- a/passwords.html
+++ b/passwords.html
@@ -433,10 +433,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Remote Skytap login (rarely used): <em>user, pw</em></p>
 </div>
 <div class="paragraph">
-<p>Remote VM Login (for when you lock the remote screen): <em>student, ???</em></p>
+<p>Remote VM Login (for when you lock the remote screen): <em>student</em>, either <em>pw</em> or <em>studentpw</em></p>
 </div>
 <div class="paragraph">
-<p>Local Student login: &#8230;&#8203;</p>
+<p>Local Student login: n/a</p>
 </div>
 <div class="paragraph">
 <p>Postgresql Web App access: <em>student, student</em></p>
@@ -444,10 +444,16 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="paragraph">
 <p>Postgresql Admin (should not be needed): <em>postgres, pgAdmin</em></p>
 </div>
+<div class="paragraph">
+<p>Jenkins User: <em>student, student</em></p>
+</div>
+<div class="paragraph">
+<p>Jenkins Admin (should not be needed): <em>admin</em>, see <em>/Users/student/.jenkins/secrets/initialAdminPassword</em></p>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-01-15 12:49:41 EST
+Last updated 2018-01-16 12:17:02 EST
 </div>
 </div>
 </body>
