--- a/site/src/main/webapp/index.html
+++ b/site/src/main/webapp/index.html
@@ -1,3 +1,8 @@
+<html>
+<head>
+	<title>Welcome to Course 936</title>
+</head>
+<body>
 <h1>Welcome to Course 936</h1>
 <p>
 This is a default web page.
@@ -10,4 +15,6 @@ You can try
 but most browsers won't allow a
 downloaded page to open a local page,
 for fairly good security reasons!
-
+So, just try the home button on your browser.
+</body>
+</html>
